@@ -1828,12 +1828,14 @@
 		    <widget class="GtkTreeView" id="current_playlist">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
+		      <property name="extension_events">GDK_EXTENSION_EVENTS_ALL</property>
 		      <property name="headers_visible">True</property>
 		      <property name="rules_hint">True</property>
 		      <property name="reorderable">False</property>
 		      <property name="enable_search">True</property>
 		      <signal name="row_activated" handler="playlist_row_activated" last_modification_time="Sat, 11 Oct 2003 21:02:56 GMT"/>
 		      <signal name="button_press_event" handler="current_playlist_mouse_event" last_modification_time="Sun, 12 Oct 2003 10:45:02 GMT"/>
+		      <signal name="key_press_event" handler="playlist_key_press_event" last_modification_time="Sat, 13 Mar 2004 16:24:59 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
