@@ -1,3 +1,9 @@
+13-03-2004 QBall <Qball@qballcow.nl>
+    *	Fixed bug #202 (timeout for popup configurable
+    *	If you press del in the playlist window it wil remove the current selected songs.
+    *	Playlists view hide state is remembered over session.
+    *	Time format is remembered over session.
+    
 06-03-2004 Qball <Qball@qballcow.nl>
     *	Added support for password authentification with mpd.
     *	Fixed highlighting bug in playlist.
